C++II/.metadata/.plugins/org.eclipse.cdt.ui/Calculator.build.log
15:05:50 **** Incremental Build of configuration Debug for project Calculator ****
make all 
Building file: ../src/Calculator.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Calculator.d" -MT"src/Calculator.o" -o "src/Calculator.o" "../src/Calculator.cpp"
../src/Calculator.cpp: In function ‘int main()’:
../src/Calculator.cpp:51:9: error: expected ‘while’ before ‘(’ token
  switch (Op)    // YOU COULD CREATE A SWITCH HERE INSTEAD OF MULTIPLE IF STATEMENTS
         ^
../src/Calculator.cpp:52:3: error: expected ‘;’ before ‘{’ token
   {
   ^
../src/Calculator.cpp:53:2: error: case label ‘'x'’ not within a switch statement
  case 'x':
  ^
../src/Calculator.cpp:54:2: error: case label ‘'X'’ not within a switch statement
  case 'X': // if operator is 'x'- for end,
  ^
../src/Calculator.cpp:57:3: error: expected primary-expression before ‘}’ token
   }
   ^
../src/Calculator.cpp:57:3: error: expected ‘;’ before ‘}’ token
../src/Calculator.cpp:16:7: warning: unused variable ‘Num1’ [-Wunused-variable]
  int  Num1;
       ^
../src/Calculator.cpp:17:7: warning: unused variable ‘Num2’ [-Wunused-variable]
  int  Num2;
       ^
make: *** [src/Calculator.o] Error 1

15:05:51 Build Finished (took 365ms)

